// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu Component Integration Testing Renders data correctly 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <BrowserRouter>
    <Router
      location={
        Object {
          "hash": "",
          "key": "default",
          "pathname": "/",
          "search": "",
          "state": null,
        }
      }
      navigationType="POP"
      navigator={
        Object {
          "action": "POP",
          "back": [Function],
          "block": [Function],
          "createHref": [Function],
          "forward": [Function],
          "go": [Function],
          "listen": [Function],
          "location": Object {
            "hash": "",
            "key": "default",
            "pathname": "/",
            "search": "",
            "state": null,
          },
          "push": [Function],
          "replace": [Function],
        }
      }
    >
      <ComponentWithRouterProp>
        <Connect(Menu)
          router={
            Object {
              "location": Object {
                "hash": "",
                "key": "default",
                "pathname": "/",
                "search": "",
                "state": null,
              },
              "navigate": [Function],
              "params": Object {},
            }
          }
        >
          <Menu
            cartError={[Function]}
            cartRequest={[Function]}
            cartSuccess={[Function]}
            getCart={[Function]}
            getMenu={[Function]}
            makeOrder={[Function]}
            menu={
              Object {
                "data": Object {
                  "addresses": Array [
                    "Avenida Caxangá, 634",
                  ],
                  "id": 2,
                  "menu": Object {
                    "destaqueIndex": 0,
                    "options": Array [
                      Object {
                        "description": "Hamburguer monstro de dar água na boca. ELIASLOL, O MELHOR COZINHEIRO DE LIMOEIRO!",
                        "item_id": 1,
                        "name": "Ogro Burguer com Batata Média",
                        "photo": "https://img.itdg.com.br/tdg/images/recipes/000/312/870/355695/355695_original.jpg",
                        "price": 25.5,
                      },
                      Object {
                        "description": "Coquinha geladinha HMMMMM!",
                        "item_id": 2,
                        "name": "Coca-cola lata",
                        "photo": "https://images-americanas.b2w.io/produtos/4575311740/imagens/coquinha-coca-cola-lata-220ml-desde-1886-sabor/4575311740_1_large.jpg",
                        "price": 5.5,
                      },
                    ],
                  },
                  "name": "Elias",
                  "photo": "https://media-cdn.tripadvisor.com/media/photo-s/05/85/e1/f5/sala-ristorante.jpg",
                  "rates": Array [
                    Object {
                      "feedback_text": "",
                      "stars": 4.5,
                      "user_id": "1",
                    },
                  ],
                },
                "error": false,
                "loading": false,
              }
            }
            menuError={[Function]}
            menuRequest={[Function]}
            menuSuccess={[Function]}
            router={
              Object {
                "location": Object {
                  "hash": "",
                  "key": "default",
                  "pathname": "/",
                  "search": "",
                  "state": null,
                },
                "navigate": [Function],
                "params": Object {},
              }
            }
            updateCart={[Function]}
          >
            <styled.div
              className="m-3"
            >
              <div
                className="sc-bczRLJ drhxhA m-3"
              >
                <h1>
                  Elias
                </h1>
                <div
                  className="d-inline-flex justify-content-center align-items-center"
                >
                  <ReactStars
                    a11y={true}
                    activeColor="#ffd700"
                    char="★"
                    color="gray"
                    count={5}
                    edit={false}
                    half={false}
                    isHalf={true}
                    onChange={[Function]}
                    size={50}
                    value={4.5}
                  >
                    <div
                      className="react-stars-wrapper-02873926373346054"
                      style={
                        Object {
                          "display": "flex",
                        }
                      }
                    >
                      <div
                        aria-label="add rating by typing an integer from 0 to 5 or pressing arrow keys"
                        className="undefined react-stars"
                        onKeyDown={[Function]}
                        style={
                          Object {
                            "overflow": "hidden",
                            "position": "relative",
                          }
                        }
                        tabIndex={null}
                      >
                        <style
                          dangerouslySetInnerHTML={
                            Object {
                              "__html": "
    .react-stars-02873926373346054:before {
      position: absolute;
      overflow: hidden;
      display: block;
      z-index: 1;
      top: 0; left: 0;
      width: 50%;
      content: attr(data-forhalf);
      color: #ffd700;
  }",
                            }
                          }
                        />
                        <Star
                          active={true}
                          config={
                            Object {
                              "a11y": true,
                              "activeColor": "#ffd700",
                              "char": "★",
                              "color": "gray",
                              "count": 5,
                              "edit": false,
                              "emptyIcon": undefined,
                              "filledIcon": undefined,
                              "halfIcon": undefined,
                              "isHalf": true,
                              "size": 50,
                            }
                          }
                          halfStarAt={4}
                          halfStarHidden={false}
                          index={0}
                          key="0"
                          onClick={[Function]}
                          onMouseLeave={[Function]}
                          onMouseOver={[Function]}
                          uniqueness="02873926373346054"
                        >
                          <span
                            className=""
                            data-forhalf="★"
                            data-index={0}
                            key="0"
                            onClick={[Function]}
                            onMouseLeave={[Function]}
                            onMouseMove={[Function]}
                            onMouseOver={[Function]}
                            style={
                              Object {
                                "color": "#ffd700",
                                "cursor": "default",
                                "display": "block",
                                "float": "left",
                                "fontSize": "50px",
                                "overflow": "hidden",
                                "position": "relative",
                              }
                            }
                          >
                            ★
                          </span>
                        </Star>
                        <Star
                          active={true}
                          config={
                            Object {
                              "a11y": true,
                              "activeColor": "#ffd700",
                              "char": "★",
                              "color": "gray",
                              "count": 5,
                              "edit": false,
                              "emptyIcon": undefined,
                              "filledIcon": undefined,
                              "halfIcon": undefined,
                              "isHalf": true,
                              "size": 50,
                            }
                          }
                          halfStarAt={4}
                          halfStarHidden={false}
                          index={1}
                          key="1"
                          onClick={[Function]}
                          onMouseLeave={[Function]}
                          onMouseOver={[Function]}
                          uniqueness="02873926373346054"
                        >
                          <span
                            className=""
                            data-forhalf="★"
                            data-index={1}
                            key="1"
                            onClick={[Function]}
                            onMouseLeave={[Function]}
                            onMouseMove={[Function]}
                            onMouseOver={[Function]}
                            style={
                              Object {
                                "color": "#ffd700",
                                "cursor": "default",
                                "display": "block",
                                "float": "left",
                                "fontSize": "50px",
                                "overflow": "hidden",
                                "position": "relative",
                              }
                            }
                          >
                            ★
                          </span>
                        </Star>
                        <Star
                          active={true}
                          config={
                            Object {
                              "a11y": true,
                              "activeColor": "#ffd700",
                              "char": "★",
                              "color": "gray",
                              "count": 5,
                              "edit": false,
                              "emptyIcon": undefined,
                              "filledIcon": undefined,
                              "halfIcon": undefined,
                              "isHalf": true,
                              "size": 50,
                            }
                          }
                          halfStarAt={4}
                          halfStarHidden={false}
                          index={2}
                          key="2"
                          onClick={[Function]}
                          onMouseLeave={[Function]}
                          onMouseOver={[Function]}
                          uniqueness="02873926373346054"
                        >
                          <span
                            className=""
                            data-forhalf="★"
                            data-index={2}
                            key="2"
                            onClick={[Function]}
                            onMouseLeave={[Function]}
                            onMouseMove={[Function]}
                            onMouseOver={[Function]}
                            style={
                              Object {
                                "color": "#ffd700",
                                "cursor": "default",
                                "display": "block",
                                "float": "left",
                                "fontSize": "50px",
                                "overflow": "hidden",
                                "position": "relative",
                              }
                            }
                          >
                            ★
                          </span>
                        </Star>
                        <Star
                          active={true}
                          config={
                            Object {
                              "a11y": true,
                              "activeColor": "#ffd700",
                              "char": "★",
                              "color": "gray",
                              "count": 5,
                              "edit": false,
                              "emptyIcon": undefined,
                              "filledIcon": undefined,
                              "halfIcon": undefined,
                              "isHalf": true,
                              "size": 50,
                            }
                          }
                          halfStarAt={4}
                          halfStarHidden={false}
                          index={3}
                          key="3"
                          onClick={[Function]}
                          onMouseLeave={[Function]}
                          onMouseOver={[Function]}
                          uniqueness="02873926373346054"
                        >
                          <span
                            className=""
                            data-forhalf="★"
                            data-index={3}
                            key="3"
                            onClick={[Function]}
                            onMouseLeave={[Function]}
                            onMouseMove={[Function]}
                            onMouseOver={[Function]}
                            style={
                              Object {
                                "color": "#ffd700",
                                "cursor": "default",
                                "display": "block",
                                "float": "left",
                                "fontSize": "50px",
                                "overflow": "hidden",
                                "position": "relative",
                              }
                            }
                          >
                            ★
                          </span>
                        </Star>
                        <Star
                          active={false}
                          config={
                            Object {
                              "a11y": true,
                              "activeColor": "#ffd700",
                              "char": "★",
                              "color": "gray",
                              "count": 5,
                              "edit": false,
                              "emptyIcon": undefined,
                              "filledIcon": undefined,
                              "halfIcon": undefined,
                              "isHalf": true,
                              "size": 50,
                            }
                          }
                          halfStarAt={4}
                          halfStarHidden={false}
                          index={4}
                          key="4"
                          onClick={[Function]}
                          onMouseLeave={[Function]}
                          onMouseOver={[Function]}
                          uniqueness="02873926373346054"
                        >
                          <span
                            className="react-stars-02873926373346054"
                            data-forhalf="★"
                            data-index={4}
                            key="4"
                            onClick={[Function]}
                            onMouseLeave={[Function]}
                            onMouseMove={[Function]}
                            onMouseOver={[Function]}
                            style={
                              Object {
                                "color": "gray",
                                "cursor": "default",
                                "display": "block",
                                "float": "left",
                                "fontSize": "50px",
                                "overflow": "hidden",
                                "position": "relative",
                              }
                            }
                          >
                            ★
                          </span>
                        </Star>
                        <p
                          role="status"
                          style={
                            Object {
                              "left": "-200rem",
                              "position": "absolute",
                            }
                          }
                        >
                          4.5
                        </p>
                      </div>
                    </div>
                  </ReactStars>
                  <styled.h4
                    className="p-3 mt-2"
                  >
                    <h4
                      className="sc-gKXOVf kRfiiF p-3 mt-2"
                    >
                      (
                      4.5
                      )
                    </h4>
                  </styled.h4>
                </div>
                <ForwardRef
                  borderless={true}
                >
                  <table
                    className="table table-borderless"
                  >
                    <tbody>
                      <tr
                        className="mx-5"
                      >
                        <styled.div>
                          <div
                            className="sc-gsnTZi fLZfYw"
                          >
                            <td>
                              <styled.div
                                className="p-2"
                              >
                                <div
                                  className="sc-dkzDqf kZwptN p-2"
                                >
                                  <styled.img
                                    className="m-2"
                                    photo="https://img.itdg.com.br/tdg/images/recipes/000/312/870/355695/355695_original.jpg"
                                  >
                                    <img
                                      className="sc-hKMtZM kqihvI m-2"
                                    />
                                  </styled.img>
                                  <styled.div
                                    className="m-4"
                                  >
                                    <div
                                      className="sc-eCYdqJ bcsQqv m-4"
                                    >
                                      <styled.p>
                                        <p
                                          className="sc-jSMfEi bKJAuf"
                                        >
                                          <h4
                                            style={
                                              Object {
                                                "fontWeight": "600",
                                              }
                                            }
                                          >
                                            Ogro Burguer com Batata Média
                                          </h4>
                                          Hamburguer monstro de dar água na boca. ELIASLOL, O MELHOR COZINHEIRO DE LIMOEIRO!
                                        </p>
                                      </styled.p>
                                      <Button
                                        active={false}
                                        disabled={false}
                                        onClick={[Function]}
                                        style={
                                          Object {
                                            "borderRadius": "65px",
                                            "paddingBottom": 0,
                                            "width": "280px",
                                          }
                                        }
                                        type="button"
                                        variant="outline-danger"
                                      >
                                        <button
                                          className="btn btn-outline-danger"
                                          disabled={false}
                                          onClick={[Function]}
                                          style={
                                            Object {
                                              "borderRadius": "65px",
                                              "paddingBottom": 0,
                                              "width": "280px",
                                            }
                                          }
                                          type="button"
                                        >
                                          <strong>
                                            Adicionar item ao carrinho
                                            <h4>
                                              + R$ 25,50
                                            </h4>
                                          </strong>
                                        </button>
                                      </Button>
                                    </div>
                                  </styled.div>
                                </div>
                              </styled.div>
                            </td>
                            <td>
                              <styled.div
                                className="p-2"
                              >
                                <div
                                  className="sc-dkzDqf kZwptN p-2"
                                >
                                  <styled.img
                                    className="m-2"
                                    photo="https://images-americanas.b2w.io/produtos/4575311740/imagens/coquinha-coca-cola-lata-220ml-desde-1886-sabor/4575311740_1_large.jpg"
                                  >
                                    <img
                                      className="sc-hKMtZM hHaEKO m-2"
                                    />
                                  </styled.img>
                                  <styled.div
                                    className="m-4"
                                  >
                                    <div
                                      className="sc-eCYdqJ bcsQqv m-4"
                                    >
                                      <styled.p>
                                        <p
                                          className="sc-jSMfEi bKJAuf"
                                        >
                                          <h4
                                            style={
                                              Object {
                                                "fontWeight": "600",
                                              }
                                            }
                                          >
                                            Coca-cola lata
                                          </h4>
                                          Coquinha geladinha HMMMMM!
                                        </p>
                                      </styled.p>
                                      <Button
                                        active={false}
                                        disabled={false}
                                        onClick={[Function]}
                                        style={
                                          Object {
                                            "borderRadius": "65px",
                                            "paddingBottom": 0,
                                            "width": "280px",
                                          }
                                        }
                                        type="button"
                                        variant="outline-danger"
                                      >
                                        <button
                                          className="btn btn-outline-danger"
                                          disabled={false}
                                          onClick={[Function]}
                                          style={
                                            Object {
                                              "borderRadius": "65px",
                                              "paddingBottom": 0,
                                              "width": "280px",
                                            }
                                          }
                                          type="button"
                                        >
                                          <strong>
                                            Adicionar item ao carrinho
                                            <h4>
                                              + R$ 5,50
                                            </h4>
                                          </strong>
                                        </button>
                                      </Button>
                                    </div>
                                  </styled.div>
                                </div>
                              </styled.div>
                            </td>
                          </div>
                        </styled.div>
                      </tr>
                    </tbody>
                  </table>
                </ForwardRef>
              </div>
            </styled.div>
          </Menu>
        </Connect(Menu)>
      </ComponentWithRouterProp>
    </Router>
  </BrowserRouter>
</Provider>
`;

exports[`Menu Component Integration Testing Renders loading correctly 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <BrowserRouter>
    <Router
      location={
        Object {
          "hash": "",
          "key": "default",
          "pathname": "/",
          "search": "",
          "state": null,
        }
      }
      navigationType="POP"
      navigator={
        Object {
          "action": "POP",
          "back": [Function],
          "block": [Function],
          "createHref": [Function],
          "forward": [Function],
          "go": [Function],
          "listen": [Function],
          "location": Object {
            "hash": "",
            "key": "default",
            "pathname": "/",
            "search": "",
            "state": null,
          },
          "push": [Function],
          "replace": [Function],
        }
      }
    >
      <ComponentWithRouterProp>
        <Connect(Menu)
          router={
            Object {
              "location": Object {
                "hash": "",
                "key": "default",
                "pathname": "/",
                "search": "",
                "state": null,
              },
              "navigate": [Function],
              "params": Object {},
            }
          }
        >
          <Menu
            cartError={[Function]}
            cartRequest={[Function]}
            cartSuccess={[Function]}
            getCart={[Function]}
            getMenu={[Function]}
            makeOrder={[Function]}
            menu={
              Object {
                "data": Array [],
                "error": false,
                "loading": false,
              }
            }
            menuError={[Function]}
            menuRequest={[Function]}
            menuSuccess={[Function]}
            router={
              Object {
                "location": Object {
                  "hash": "",
                  "key": "default",
                  "pathname": "/",
                  "search": "",
                  "state": null,
                },
                "navigate": [Function],
                "params": Object {},
              }
            }
            updateCart={[Function]}
          >
            <styled.div
              className="m-3"
            >
              <div
                className="sc-bczRLJ drhxhA m-3"
              >
                <h1 />
                <div
                  className="d-inline-flex justify-content-center align-items-center"
                >
                  <ReactStars
                    a11y={true}
                    activeColor="#ffd700"
                    char="★"
                    color="gray"
                    count={5}
                    edit={false}
                    half={false}
                    isHalf={true}
                    onChange={[Function]}
                    size={50}
                    value={NaN}
                  >
                    <div
                      className="react-stars-wrapper-0019134480616962435"
                      style={
                        Object {
                          "display": "flex",
                        }
                      }
                    >
                      <div
                        aria-label="add rating by typing an integer from 0 to 5 or pressing arrow keys"
                        className="undefined react-stars"
                        onKeyDown={[Function]}
                        style={
                          Object {
                            "overflow": "hidden",
                            "position": "relative",
                          }
                        }
                        tabIndex={null}
                      >
                        <style
                          dangerouslySetInnerHTML={
                            Object {
                              "__html": "
    .react-stars-0019134480616962435:before {
      position: absolute;
      overflow: hidden;
      display: block;
      z-index: 1;
      top: 0; left: 0;
      width: 50%;
      content: attr(data-forhalf);
      color: #ffd700;
  }",
                            }
                          }
                        />
                        <Star
                          active={false}
                          config={
                            Object {
                              "a11y": true,
                              "activeColor": "#ffd700",
                              "char": "★",
                              "color": "gray",
                              "count": 5,
                              "edit": false,
                              "emptyIcon": undefined,
                              "filledIcon": undefined,
                              "halfIcon": undefined,
                              "isHalf": true,
                              "size": 50,
                            }
                          }
                          halfStarAt={NaN}
                          halfStarHidden={false}
                          index={0}
                          key="0"
                          onClick={[Function]}
                          onMouseLeave={[Function]}
                          onMouseOver={[Function]}
                          uniqueness="0019134480616962435"
                        >
                          <span
                            className=""
                            data-forhalf="★"
                            data-index={0}
                            key="0"
                            onClick={[Function]}
                            onMouseLeave={[Function]}
                            onMouseMove={[Function]}
                            onMouseOver={[Function]}
                            style={
                              Object {
                                "color": "gray",
                                "cursor": "default",
                                "display": "block",
                                "float": "left",
                                "fontSize": "50px",
                                "overflow": "hidden",
                                "position": "relative",
                              }
                            }
                          >
                            ★
                          </span>
                        </Star>
                        <Star
                          active={false}
                          config={
                            Object {
                              "a11y": true,
                              "activeColor": "#ffd700",
                              "char": "★",
                              "color": "gray",
                              "count": 5,
                              "edit": false,
                              "emptyIcon": undefined,
                              "filledIcon": undefined,
                              "halfIcon": undefined,
                              "isHalf": true,
                              "size": 50,
                            }
                          }
                          halfStarAt={NaN}
                          halfStarHidden={false}
                          index={1}
                          key="1"
                          onClick={[Function]}
                          onMouseLeave={[Function]}
                          onMouseOver={[Function]}
                          uniqueness="0019134480616962435"
                        >
                          <span
                            className=""
                            data-forhalf="★"
                            data-index={1}
                            key="1"
                            onClick={[Function]}
                            onMouseLeave={[Function]}
                            onMouseMove={[Function]}
                            onMouseOver={[Function]}
                            style={
                              Object {
                                "color": "gray",
                                "cursor": "default",
                                "display": "block",
                                "float": "left",
                                "fontSize": "50px",
                                "overflow": "hidden",
                                "position": "relative",
                              }
                            }
                          >
                            ★
                          </span>
                        </Star>
                        <Star
                          active={false}
                          config={
                            Object {
                              "a11y": true,
                              "activeColor": "#ffd700",
                              "char": "★",
                              "color": "gray",
                              "count": 5,
                              "edit": false,
                              "emptyIcon": undefined,
                              "filledIcon": undefined,
                              "halfIcon": undefined,
                              "isHalf": true,
                              "size": 50,
                            }
                          }
                          halfStarAt={NaN}
                          halfStarHidden={false}
                          index={2}
                          key="2"
                          onClick={[Function]}
                          onMouseLeave={[Function]}
                          onMouseOver={[Function]}
                          uniqueness="0019134480616962435"
                        >
                          <span
                            className=""
                            data-forhalf="★"
                            data-index={2}
                            key="2"
                            onClick={[Function]}
                            onMouseLeave={[Function]}
                            onMouseMove={[Function]}
                            onMouseOver={[Function]}
                            style={
                              Object {
                                "color": "gray",
                                "cursor": "default",
                                "display": "block",
                                "float": "left",
                                "fontSize": "50px",
                                "overflow": "hidden",
                                "position": "relative",
                              }
                            }
                          >
                            ★
                          </span>
                        </Star>
                        <Star
                          active={false}
                          config={
                            Object {
                              "a11y": true,
                              "activeColor": "#ffd700",
                              "char": "★",
                              "color": "gray",
                              "count": 5,
                              "edit": false,
                              "emptyIcon": undefined,
                              "filledIcon": undefined,
                              "halfIcon": undefined,
                              "isHalf": true,
                              "size": 50,
                            }
                          }
                          halfStarAt={NaN}
                          halfStarHidden={false}
                          index={3}
                          key="3"
                          onClick={[Function]}
                          onMouseLeave={[Function]}
                          onMouseOver={[Function]}
                          uniqueness="0019134480616962435"
                        >
                          <span
                            className=""
                            data-forhalf="★"
                            data-index={3}
                            key="3"
                            onClick={[Function]}
                            onMouseLeave={[Function]}
                            onMouseMove={[Function]}
                            onMouseOver={[Function]}
                            style={
                              Object {
                                "color": "gray",
                                "cursor": "default",
                                "display": "block",
                                "float": "left",
                                "fontSize": "50px",
                                "overflow": "hidden",
                                "position": "relative",
                              }
                            }
                          >
                            ★
                          </span>
                        </Star>
                        <Star
                          active={false}
                          config={
                            Object {
                              "a11y": true,
                              "activeColor": "#ffd700",
                              "char": "★",
                              "color": "gray",
                              "count": 5,
                              "edit": false,
                              "emptyIcon": undefined,
                              "filledIcon": undefined,
                              "halfIcon": undefined,
                              "isHalf": true,
                              "size": 50,
                            }
                          }
                          halfStarAt={NaN}
                          halfStarHidden={false}
                          index={4}
                          key="4"
                          onClick={[Function]}
                          onMouseLeave={[Function]}
                          onMouseOver={[Function]}
                          uniqueness="0019134480616962435"
                        >
                          <span
                            className=""
                            data-forhalf="★"
                            data-index={4}
                            key="4"
                            onClick={[Function]}
                            onMouseLeave={[Function]}
                            onMouseMove={[Function]}
                            onMouseOver={[Function]}
                            style={
                              Object {
                                "color": "gray",
                                "cursor": "default",
                                "display": "block",
                                "float": "left",
                                "fontSize": "50px",
                                "overflow": "hidden",
                                "position": "relative",
                              }
                            }
                          >
                            ★
                          </span>
                        </Star>
                        <p
                          role="status"
                          style={
                            Object {
                              "left": "-200rem",
                              "position": "absolute",
                            }
                          }
                        >
                          NaN
                        </p>
                      </div>
                    </div>
                  </ReactStars>
                  <styled.h4
                    className="p-3 mt-2"
                  >
                    <h4
                      className="sc-gKXOVf kRfiiF p-3 mt-2"
                    >
                      (
                      NaN
                      )
                    </h4>
                  </styled.h4>
                </div>
                <ForwardRef
                  borderless={true}
                >
                  <table
                    className="table table-borderless"
                  >
                    <tbody>
                      <tr
                        className="mx-5"
                      >
                        <styled.div>
                          <div
                            className="sc-gsnTZi fLZfYw"
                          />
                        </styled.div>
                      </tr>
                    </tbody>
                  </table>
                </ForwardRef>
              </div>
            </styled.div>
          </Menu>
        </Connect(Menu)>
      </ComponentWithRouterProp>
    </Router>
  </BrowserRouter>
</Provider>
`;
